practices/observability/samples/redis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observ-redis-prom-exporter
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /observ-prom-exporter-redis(.*)
            pathType: Prefix
            backend:
              service:
                name: observ-redis-cache-service
                port:
                  number: 9121
              # serviceName: redis-cache-service
              # servicePort: 9121
